--- a/frontend/src/styles/-veriables.scss
+++ b/frontend/src/styles/-veriables.scss
@@ -1,4 +1,5 @@
-$header-color: #428612;
-$footer-color: #326414;
-$button-color: #bcd76d;
-$background-color: #e1edc1;
+$header-color: #a9b6b6;
+$footer-color: #71757a;
+$button-color: #e3b905;
+$background-color: #e3ece2;
+$cards-color: #262f0d;
