--- a/frontend/src/styles/-veriables.scss
+++ b/frontend/src/styles/-veriables.scss
@@ -1,5 +1,5 @@
 $header-color: #a9b6b6;
 $footer-color: #71757a;
-$button-color: #e3b905;
+$button-color: #262f0d;
 $background-color: #e3ece2;
-$cards-color: #262f0d;
+$cards-color: #e3b905;
