--- a/frontend/src/styles/recipe-cards.scss
+++ b/frontend/src/styles/recipe-cards.scss
@@ -19,7 +19,10 @@ h5 {
   margin-top: 0;
   margin-bottom: 0;
 }
-
+.recipe-cards {
+  display: flex;
+  gap: 2.5rem;
+}
 /* Card-hover */
 .card-hover {
   $root: &;
